--- a/wiki/footer.html
+++ b/wiki/footer.html
@@ -7,14 +7,14 @@
       </div>
       <div class="col-lg-3 col-xs-12">
         <h4 class="mt-lg-0 mt-sm-3">Links</h4>
-          <ul class="m-2 p-2">
-            <li><a href="#">Lorem ipsum</a></li>
-            <li><a href="#">Nam mauris velit</a></li>
-            <li><a href="#">Etiam vitae mauris</a></li>
-            <li><a href="#">Fusce scelerisque</a></li>
-            <li><a href="#">Sed faucibus</a></li>
-            <li><a href="#">Mauris efficitur nulla</a></li>
-          </ul>
+        <ul class="m-2 p-2">
+          <li><a href="#">Lorem ipsum</a></li>
+          <li><a href="#">Nam mauris velit</a></li>
+          <li><a href="#">Etiam vitae mauris</a></li>
+          <li><a href="#">Fusce scelerisque</a></li>
+          <li><a href="#">Sed faucibus</a></li>
+          <li><a href="#">Mauris efficitur nulla</a></li>
+        </ul>
       </div>
       <div class="col-lg-3 col-xs-12">
         <h4 class="mt-lg-0 mt-sm-4 mb-3">Contact</h4>
@@ -27,8 +27,11 @@
     <!-- The following MUST be on every page: license information and link to the repository on gitlab.igem.org -->
     <div class="row mt-4">
       <div class="col">
-        <p class="mb-0"><small>© 2023 - Content on this site is licensed under a <a class="subfoot" href="https://creativecommons.org/licenses/by/4.0/" rel="license">Creative Commons Attribution 4.0 International license</a>.</small></p>
-	      <p><small>The repository used to create this website is available at <a href="https://gitlab.igem.org/2023/example">gitlab.igem.org/2023/example</a>.</small></p>
+        <p class="mb-0"><small>© 2023 - Content on this site is licensed under a <a class="subfoot"
+              href="https://creativecommons.org/licenses/by/4.0/" rel="license">Creative Commons Attribution 4.0
+              International license</a>.</small></p>
+        <p><small>The repository used to create this website is available at <a
+              href="https://gitlab.igem.org/2023/example">gitlab.igem.org/2023/example</a>.</small></p>
       </div>
     </div>
   </div>
