--- a/wiki/layout.html
+++ b/wiki/layout.html
@@ -13,8 +13,11 @@
 
   <!-- Custom CSS -->
   <link href="{{ url_for('static', filename = 'style.css') }}" rel="stylesheet">
+  <link href="{{ url_for('static', filename = 'lato-font.css') }}" rel="stylesheet">
 
-  <title>{% block title %}{% endblock %} | Example - iGEM 2023</title>
+  <title>
+    {% block title %} {% endblock %} | Example - iGEM 2023
+  </title>
 
 </head>
 
@@ -23,7 +26,7 @@
   {% include 'menu.html' %}
 
   <!-- Header -->
-  <header class="bg-hero py-5 mb-5">
+  <!-- <header class="bg-hero py-5 mb-5">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
@@ -32,10 +35,11 @@
         </div>
       </div>
     </div>
-  </header>
+  </header> -->
 
   <!-- Page Content -->
   <div class="container">
+    <br><br>
     {% block page_content %}{% endblock %}
   </div>
 
