Add Experiments Template Page
Styling can be viewed in style.css, I tried to make it as least messy as possible but w/ subheaders it feels a little long
Also got rid of "home" button and now temp UNC-Chapel Hill header in navbar routes to home

--- a/wiki/pages/experiments.html
+++ b/wiki/pages/experiments.html
@@ -6,23 +6,34 @@
 {% block page_content %}
 
 <div class="row mt-4">
-  <div class="col-lg-8">
-    <h2>What should this page contain?</h2>
-    <hr>
-    <p>Describe the research, experiments, and protocols you used in your iGEM project. These should be detailed enough for another team to repeat your experiments.</p>
-    <p>If you made Parts this year, please remember to put all information, characterization, and measurement data on the Part's Main Page on the <a href="http://parts.igem.org/Main_Page">Registry</a>.</p>
+
+  <!--Header -->
+  <div class="row justify-content-center mb-4 mt-2">
+    <h1 class="text-center header-text">EXPERIMENTS</h1>
   </div>
-  <div class="col-lg-4">
-    <h2>Inspirations</h2>
-    <hr>
-    <ul>
-      <li><a href="https://2019.igem.org/Team:Nantes/Experiments">2019 Nantes</a></li>
-      <li><a href="https://2019.igem.org/Team:TU_Eindhoven/Experiments">2019 TU Eindhoven</a></li>
-      <li><a href="https://2019.igem.org/Team:Mingdao/Demonstrate">2019 Mingdao</a></li>
-      <li><a href="https://2020.igem.org/Team:Amsterdam/Experiments">2020 Amsterdam</a></li>
-      <li><a href="https://2020.igem.org/Team:NCTU_Formosa/Experiments">2020 NCTU Formosa</a></li>
-      <li><a href="https://2020.igem.org/Team:USAFA/Experiments">2020 USAFA</a></li>
-    </ul>
+
+  <!-- Table of Contents -->
+  <div class="col-lg-3" style="background-color: #fff;">
+    table of contents here
+    <br>
+    notes for layla: ive made this as a large column w/ no padding so you can change whatever in here and add your own padding to make it closer to the mockup
+    <br>
+    i also did like inline css to show how big the column is you'll probably want to get rid of that and all this text when you implement it though
+  </div>
+
+  <!--Information Div-->
+  <div class="exp_div col-lg-8">
+    <h2 class="subheader">PROTEIN DESIGN</h2>
+    <p>
+      &emsp; Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ac est et tellus sollicitudin elementum. Praesent sem nisi, lobortis at orci vitae, dignissim posuere urna. Nunc tincidunt facilisis nunc, et imperdiet enim condimentum in. Donec lobortis mauris eget erat sodales, eget pharetra metus mattis. Aliquam et laoreet ante. Vestibulum gravida leo non diam varius sagittis. Donec faucibus pulvinar consectetur. Morbi et vulputate nisi. Praesent eleifend, risus ut pharetra sodales, massa tellus ultricies sapien, quis tempor sem ipsum a ligula. Sed dictum aliquam odio nec auctor. Pellentesque ante felis, semper ac augue at, laoreet semper ex. Pellentesque hendrerit hendrerit dolor, sed ornare sem malesuada nec. Integer ligula nibh, laoreet a justo sed, rhoncus posuere nulla. Donec non dolor commodo, pellentesque nunc nec, ullamcorper diam. Aliquam erat volutpat.
+    </p>
+    <h2 class="subheader_small">SURVIVAL SIMULATION</h2>
+    <p>
+      &emsp;Sed sed hendrerit sapien. Duis gravida tincidunt quam, non viverra mauris accumsan non. Donec sed finibus risus. Praesent imperdiet ligula quis blandit vulputate. Suspendisse faucibus fermentum turpis, eu mattis mi feugiat nec. Pellentesque bibendum velit vel posuere feugiat. Duis scelerisque, turpis varius consectetur vestibulum, arcu diam sollicitudin magna, et interdum sapien elit et tortor. Fusce congue, arcu eget volutpat scelerisque, massa lorem gravida sapien, in volutpat dolor est at felis.
+    </p>
+    <p>
+      &emsp; Donec pretium aliquam neque vel tempus. Pellentesque malesuada, nunc a eleifend maximus, lacus elit pharetra massa, non commodo tortor tellus nec neque. Maecenas ultricies orci ac lorem blandit porttitor. Aliquam ut metus cursus, dapibus lectus iaculis, elementum ex. Pellentesque aliquet pellentesque dignissim. Curabitur in erat vitae justo porttitor consequat sed a arcu. Suspendisse potenti. Etiam mollis massa ut tincidunt blandit. Nam feugiat feugiat vulputate. In id tristique justo. Morbi non placerat elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam leo eros, convallis sed tellus id, dictum porttitor dolor.
+    </p>
   </div>
 </div>
 
