--- a/wiki/menu.html
+++ b/wiki/menu.html
@@ -1,8 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
 
+    <!-- This is where we should rewire the navbar to the small icon w/ pop up upon user click -->
+
     <!---- TEAM NAME ---->
-    <a class="navbar-brand" href="#">Example</a>
+    <a class="navbar-brand" href="{{ url_for('home') }}">UNC Chapel-Hill</a>
 
     <!---- SMALL SCREEN MENU ICON ---->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,9 +15,9 @@
       <ul class="navbar-nav ml-auto left-aligned">
 
         <!---- HOME ---->
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="{{ url_for('home') }}">Home</a>
-        </li>
+        </li> -->
 
         <!---- TEAM ---->
         <li class="nav-item dropdown">
