Fixed ToC styling + scroll
Bootstrap was messing with the presets. Also switched inline JS to external file referenced in layout.html, and added function that scrolls to ToC clicked element, placing it around halfway on screen instead of the top.

--- a/wiki/layout.html
+++ b/wiki/layout.html
@@ -15,6 +15,9 @@
   <link href="{{ url_for('static', filename = 'style.css') }}" rel="stylesheet">
   <link href="{{ url_for('static', filename = 'lato-font.css') }}" rel="stylesheet">
 
+  <!--Custom Javascript-->
+  <script src="{{ url_for('static', filename = 'index.js') }}"></script>
+
   <title>
     {% block title %} {% endblock %} | Example - iGEM 2023
   </title>
