--- a/wiki/pages/experiments.html
+++ b/wiki/pages/experiments.html
@@ -13,108 +13,67 @@
   </div>
 
   <!-- Table of Contents -->
-  <div class="col-lg-3" style="background-color: #fff;">
-    
-    <div class="toc-header">
-      <h4 class="toc-heading">Contents</h4>
-    </div>
+  <div class="col-lg-3">
+
     <div class="toc-list-wrapper">
+        <div class="toc-header">
+            <h4 class="toc-heading">Contents</h4>
+        </div>
         <ul class="toc-list">
-            <li class="toc-list-header dropdown">
-                <a class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Protein design</a>
-                <ul class="toc-list-items dropdown-menu">
-                    <li class="toc-list-item"><a class="dropdown-item">Survival simulation</a></li>
-                    <li class="toc-list-item"><a class="dropdown-item">Algorithm mods</a></li>
+            <li class="toc-list-header">
+                <a class="dropdown-toggle-toc" aria-expanded="false">Protein design</a>
+                <ul class="toc-list-items">
+                    <li class="toc-list-item">
+                        <a class="dropdown-item" href="#survival-sim">
+                            Survival simulation
+                        </a>
+                    </li>
+                    <li class="toc-list-item">
+                        <a class="dropdown-item">Algorithm mods</a>
+                    </li>
                 </ul>
             </li>
-            <li class="toc-list-header dropdown">
-                <a class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Lorem ipsum</a>
-                <ul class="toc-list-items dropdown-menu">
-                    <li class="toc-list-item"><a class="dropdown-item">Dolor sit amet</a></li>
-                    <li class="toc-list-item"><a class="dropdown-item">Consectetur adipiscing</a></li>
+            <li class="toc-list-header">
+                <a class="dropdown-toggle-toc" aria-expanded="false">Lorem Ipsum</a>
+                <ul class="toc-list-items">
+                    <li class="toc-list-item">
+                        <a class="dropdown-item" href="#survival-sim">
+                            Survival simulation
+                        </a>
+                    </li>
+                    <li class="toc-list-item">
+                        <a class="dropdown-item">Algorithm mods</a>
+                    </li>
                 </ul>
             </li>
-            <li class="toc-list-header dropdown">
-                <a class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Sed do eiusmod</a>
-                <ul class="toc-list-items dropdown-menu">
-                    <li class="toc-list-item"><a class="dropdown-item">Tempor incididunt</a></li>
-                    <li class="toc-list-item"><a class="dropdown-item">Ut labore et dolore</a></li>
+            <li class="toc-list-header">
+                <a class="dropdown-toggle-toc" aria-expanded="false">Dolor sit Amet</a>
+                <ul class="toc-list-items">
+                    <li class="toc-list-item">
+                        <a class="dropdown-item" href="#survival-sim">
+                            Survival simulation
+                        </a>
+                    </li>
+                    <li class="toc-list-item">
+                        <a class="dropdown-item">Algorithm mods</a>
+                    </li>
                 </ul>
             </li>
-            <li class="toc-list-header dropdown">
-                <a class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Magna aliqua</a>
-                <ul class="toc-list-items dropdown-menu">
-                    <li class="toc-list-item"><a class="dropdown-item">Ut enim ad mimim veniam</a></li>
-                    <li class="toc-list-item"><a class="dropdown-item">Quis nostrud exercitation</a></li>
+            <li class="toc-list-header">
+                <a class="dropdown-toggle-toc" aria-expanded="false">yaaa</a>
+                <ul class="toc-list-items">
+                    <li class="toc-list-item">
+                        <a class="dropdown-item" href="#survival-sim">
+                            Survival simulation
+                        </a>
+                    </li>
+                    <li class="toc-list-item">
+                        <a class="dropdown-item">Algorithm mods</a>
+                    </li>
                 </ul>
             </li>
-            <li class="toc-list-header dropdown">
-                <a class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Ullamco laboris</a>
-                <ul class="toc-list-items dropdown-menu">
-                    <li class="toc-list-item"><a class="dropdown-item">Nisi ut aliquip</a></li>
-                    <li class="toc-list-item"><a class="dropdown-item">Ex ea commodo consequat</a></li>
-                </ul>
-            </li>
-            <li class="toc-list-header dropdown">
-                <a class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Duis aute irure dolor</a>
-                <ul class="toc-list-items dropdown-menu">
-                    <li class="toc-list-item"><a class="dropdown-item">In reprehenderit</a></li>
-                    <li class="toc-list-item"><a class="dropdown-item">In voluptate</a></li>
-                </ul>
-            </li>
-            <li class="toc-list-header dropdown">
-                <a class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Velit esse cillum dolore</a>
-                <ul class="toc-list-items dropdown-menu">
-                    <li class="toc-list-item"><a class="dropdown-item">Eu fugiat nulla pariatur</a></li>
-                    <li class="toc-list-item"><a class="dropdown-item">Excepteur sint occaecat</a></li>
-                </ul>
-            </li>
-            <li class="toc-list-header dropdown">
-                <a class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Cupidatat non proident</a>
-                <ul class="toc-list-items dropdown-menu">
-                    <li class="toc-list-item"><a class="dropdown-item">Sunt in culpa</a></li>
-                    <li class="toc-list-item"><a class="dropdown-item">Qui officia</a></li>
-                </ul>
-            </li>
-            <li class="toc-list-header dropdown">
-                <a class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Deserunt mollit</a>
-                <ul class="toc-list-items dropdown-menu">
-                    <li class="toc-list-item"><a class="dropdown-item">Anim id</a></li>
-                    <li class="toc-list-item"><a class="dropdown-item">Est laboru</a></li>
-                </ul>
-            </li>
-      </ul>
-  </div>
-  <script>
-      document.addEventListener("DOMContentLoaded", function() {
-        const toggles = document.querySelectorAll('.dropdown-toggle');
-        const items = document.querySelectorAll('.toc-list-items');
-
-        toggles.forEach(function(toggle) {
-            toggle.addEventListener('click', function(event) {
-                event.stopPropagation();
-                const dropdown = toggle.nextElementSibling;
-                const isOpen = dropdown.classList.contains('show');
-                if (isOpen) {
-                    dropdown.classList.remove('show');
-                } else {
-                    dropdown.classList.add('show');
-                }
-            });
-        });
-
-        window.addEventListener('click', function() {
-            items.forEach(function(item) {
-                item.classList.remove('show');
-            });
-        });
-    });
-  </script>
-  
-    <br>
-    notes for layla: ive made this as a large column w/ no padding so you can change whatever in here and add your own padding to make it closer to the mockup
-    <br>
-    i also did like inline css to show how big the column is you'll probably want to get rid of that and all this text when you implement it though
+        </ul>
+    </div>
   </div>
 
   <!--Information Div-->
@@ -123,13 +82,19 @@
     <p>
       &emsp; Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ac est et tellus sollicitudin elementum. Praesent sem nisi, lobortis at orci vitae, dignissim posuere urna. Nunc tincidunt facilisis nunc, et imperdiet enim condimentum in. Donec lobortis mauris eget erat sodales, eget pharetra metus mattis. Aliquam et laoreet ante. Vestibulum gravida leo non diam varius sagittis. Donec faucibus pulvinar consectetur. Morbi et vulputate nisi. Praesent eleifend, risus ut pharetra sodales, massa tellus ultricies sapien, quis tempor sem ipsum a ligula. Sed dictum aliquam odio nec auctor. Pellentesque ante felis, semper ac augue at, laoreet semper ex. Pellentesque hendrerit hendrerit dolor, sed ornare sem malesuada nec. Integer ligula nibh, laoreet a justo sed, rhoncus posuere nulla. Donec non dolor commodo, pellentesque nunc nec, ullamcorper diam. Aliquam erat volutpat.
     </p>
-    <h2 class="subheader_small">SURVIVAL SIMULATION</h2>
+    <h2 class="subheader_small" id="survival-sim">SURVIVAL SIMULATION</h2>
     <p>
       &emsp;Sed sed hendrerit sapien. Duis gravida tincidunt quam, non viverra mauris accumsan non. Donec sed finibus risus. Praesent imperdiet ligula quis blandit vulputate. Suspendisse faucibus fermentum turpis, eu mattis mi feugiat nec. Pellentesque bibendum velit vel posuere feugiat. Duis scelerisque, turpis varius consectetur vestibulum, arcu diam sollicitudin magna, et interdum sapien elit et tortor. Fusce congue, arcu eget volutpat scelerisque, massa lorem gravida sapien, in volutpat dolor est at felis.
     </p>
     <p>
       &emsp; Donec pretium aliquam neque vel tempus. Pellentesque malesuada, nunc a eleifend maximus, lacus elit pharetra massa, non commodo tortor tellus nec neque. Maecenas ultricies orci ac lorem blandit porttitor. Aliquam ut metus cursus, dapibus lectus iaculis, elementum ex. Pellentesque aliquet pellentesque dignissim. Curabitur in erat vitae justo porttitor consequat sed a arcu. Suspendisse potenti. Etiam mollis massa ut tincidunt blandit. Nam feugiat feugiat vulputate. In id tristique justo. Morbi non placerat elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam leo eros, convallis sed tellus id, dictum porttitor dolor.
     </p>
+    <p>
+        &emsp; Donec pretium aliquam neque vel tempus. Pellentesque malesuada, nunc a eleifend maximus, lacus elit pharetra massa, non commodo tortor tellus nec neque. Maecenas ultricies orci ac lorem blandit porttitor. Aliquam ut metus cursus, dapibus lectus iaculis, elementum ex. Pellentesque aliquet pellentesque dignissim. Curabitur in erat vitae justo porttitor consequat sed a arcu. Suspendisse potenti. Etiam mollis massa ut tincidunt blandit. Nam feugiat feugiat vulputate. In id tristique justo. Morbi non placerat elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam leo eros, convallis sed tellus id, dictum porttitor dolor.
+      </p>
+      <p>
+        &emsp; Donec pretium aliquam neque vel tempus. Pellentesque malesuada, nunc a eleifend maximus, lacus elit pharetra massa, non commodo tortor tellus nec neque. Maecenas ultricies orci ac lorem blandit porttitor. Aliquam ut metus cursus, dapibus lectus iaculis, elementum ex. Pellentesque aliquet pellentesque dignissim. Curabitur in erat vitae justo porttitor consequat sed a arcu. Suspendisse potenti. Etiam mollis massa ut tincidunt blandit. Nam feugiat feugiat vulputate. In id tristique justo. Morbi non placerat elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam leo eros, convallis sed tellus id, dictum porttitor dolor.
+      </p>
   </div>
 </div>
 
