Switched JS to defer
Got rid of some comments and for readability purposes got rid of JS loading event listener in favor of changing the file to defer on load in layout.html

--- a/wiki/layout.html
+++ b/wiki/layout.html
@@ -16,7 +16,7 @@
   <link href="{{ url_for('static', filename = 'lato-font.css') }}" rel="stylesheet">
 
   <!--Custom Javascript-->
-  <script src="{{ url_for('static', filename = 'index.js') }}"></script>
+  <script src="{{ url_for('static', filename = 'index.js') }}" defer></script>
 
   <title>
     {% block title %} {% endblock %} | Example - iGEM 2023
