team page start

--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -4,8 +4,97 @@
 {% block lead %}On this page you can introduce your team members, instructors, and advisors.{% endblock %}
 
 {% block page_content %}
+<div class="row justify-content-center mb-4 mt-2">
+  <h1 class="text-center header-text">TEAM</h1>
+</div>
 
-<div class="row">
+<div class = "big_group_picture">
+**big group team picture
+</div>
+
+<div class = "team_members">
+    <div class = "team_image"> 
+    </div>
+    <div class = "team_image"> 
+    </div>
+    <div class = "team_image"> 
+    </div>
+</div>
+<div class = "name_rows">
+  <div class = "name">
+    First + Last name
+  </div>
+  <div class = "name">
+    First + Last name
+  </div>
+  <div class = "name">
+    First + Last name
+  </div>
+</div>
+
+<div class = "team_members">
+  <div class = "team_image"> 
+  </div>
+  <div class = "team_image"> 
+  </div>
+  <div class = "team_image"> 
+  </div>
+</div>
+
+<div class = "name_rows">
+  <div class = "name">
+    First + Last name
+  </div>
+  <div class = "name">
+    First + Last name
+  </div>
+  <div class = "name">
+    First + Last name
+  </div>
+</div>
+
+<div class = "team_members">
+  <div class = "team_image"> 
+  </div>
+  <div class = "team_image"> 
+  </div>
+  <div class = "team_image"> 
+  </div>
+</div>
+
+<div class = "name_rows">
+<div class = "name">
+  First + Last name
+</div>
+<div class = "name">
+  First + Last name
+</div>
+<div class = "name">
+  First + Last name
+</div>
+</div>
+
+<div class = "team_members">
+  <div class = "team_image"> 
+  </div>
+  <div class = "team_image"> 
+  </div>
+  <div class = "team_image"> 
+  </div>
+</div>
+
+<div class = "name_rows">
+<div class = "name">
+  First + Last name
+</div>
+<div class = "name">
+  First + Last name
+</div>
+<div class = "name">
+  First + Last name
+</div>
+</div>
+<!-- <div class="row">
   <div class="col-8">
     <h2>What should this page contain?</h2>
     <hr>
@@ -29,6 +118,6 @@
       <li><a href="https://2020.igem.org/Team:Lethbridge/Members">2020 Lethbridge</a></li>
     </ul>
   </div>
-</div>
+</div> -->
 
 {% endblock %}
