inprogress team page

--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -31,6 +31,17 @@
     First + Last name
   </div>
 </div>
+<div class = "job_rows">
+  <div class = "job">
+    job
+  </div>
+  <div class = "job">
+    job
+  </div>
+  <div class = "job">
+    job
+  </div>
+</div>
 
 <div class = "team_members">
   <div class = "team_image"> 
@@ -53,6 +64,18 @@
   </div>
 </div>
 
+<div class = "job_rows">
+  <div class = "job">
+    job
+  </div>
+  <div class = "job">
+    job
+  </div>
+  <div class = "job">
+    job
+  </div>
+</div>
+
 <div class = "team_members">
   <div class = "team_image"> 
   </div>
@@ -63,15 +86,27 @@
 </div>
 
 <div class = "name_rows">
-<div class = "name">
-  First + Last name
+  <div class = "name">
+    First + Last name
+  </div>
+  <div class = "name">
+    First + Last name
+  </div>
+  <div class = "name">
+    First + Last name
+  </div>
 </div>
-<div class = "name">
-  First + Last name
-</div>
-<div class = "name">
-  First + Last name
-</div>
+
+<div class = "job_rows">
+  <div class = "job">
+    job
+  </div>
+  <div class = "job">
+    job
+  </div>
+  <div class = "job">
+    job
+  </div>
 </div>
 
 <div class = "team_members">
@@ -84,16 +119,29 @@
 </div>
 
 <div class = "name_rows">
-<div class = "name">
-  First + Last name
+    <div class = "name">
+      First + Last name
+    </div>
+    <div class = "name">
+      First + Last name
+    </div>
+    <div class = "name">
+      First + Last name
+    </div>
 </div>
-<div class = "name">
-  First + Last name
+
+<div class = "job_rows">
+  <div class = "job">
+    job
+  </div>
+  <div class = "job">
+    job
+  </div>
+  <div class = "job">
+    job
+  </div>
 </div>
-<div class = "name">
-  First + Last name
-</div>
-</div>
+
 <!-- <div class="row">
   <div class="col-8">
     <h2>What should this page contain?</h2>
