--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -12,135 +12,385 @@
 **big group team picture
 </div>
 
-<div class = "team_members">
+
+
+<div class = members>
+
+  <div class = person>
     <div class = "team_image"> 
     </div>
-    <div class = "team_image"> 
-    </div>
-    <div class = "team_image"> 
-    </div>
-</div>
-<div class = "name_rows">
-  <div class = "name">
-    First + Last name
-  </div>
-  <div class = "name">
-    First + Last name
-  </div>
-  <div class = "name">
-    First + Last name
-  </div>
-</div>
-<div class = "job_rows">
-  <div class = "job">
-    job
-  </div>
-  <div class = "job">
-    job
-  </div>
-  <div class = "job">
-    job
-  </div>
-</div>
-
-<div class = "team_members">
-  <div class = "team_image"> 
-  </div>
-  <div class = "team_image"> 
-  </div>
-  <div class = "team_image"> 
-  </div>
-</div>
-
-<div class = "name_rows">
-  <div class = "name">
-    First + Last name
-  </div>
-  <div class = "name">
-    First + Last name
-  </div>
-  <div class = "name">
-    First + Last name
-  </div>
-</div>
-
-<div class = "job_rows">
-  <div class = "job">
-    job
-  </div>
-  <div class = "job">
-    job
-  </div>
-  <div class = "job">
-    job
-  </div>
-</div>
-
-<div class = "team_members">
-  <div class = "team_image"> 
-  </div>
-  <div class = "team_image"> 
-  </div>
-  <div class = "team_image"> 
-  </div>
-</div>
-
-<div class = "name_rows">
-  <div class = "name">
-    First + Last name
-  </div>
-  <div class = "name">
-    First + Last name
-  </div>
-  <div class = "name">
-    First + Last name
-  </div>
-</div>
-
-<div class = "job_rows">
-  <div class = "job">
-    job
-  </div>
-  <div class = "job">
-    job
-  </div>
-  <div class = "job">
-    job
-  </div>
-</div>
-
-<div class = "team_members">
-  <div class = "team_image"> 
-  </div>
-  <div class = "team_image"> 
-  </div>
-  <div class = "team_image"> 
-  </div>
-</div>
-
-<div class = "name_rows">
     <div class = "name">
-      First + Last name
+      Gavin Wiltshire
+    </div>
+    <div class = "job">
+      Team Lead
+    </div>
+  </div>
+
+  <div class = person>
+    <div class = "team_image"> 
     </div>
     <div class = "name">
       First + Last name
     </div>
-    <div class = "name">
-      First + Last name
+    <div class = "job">
+      job
     </div>
+  </div>>
+
+  <div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    First + Last name
+  </div>
+  <div class = "job">
+    Job
+  </div>
+  </div>
+
+  <div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Isabel Lopez Murillo
+  </div>
+  <div class = "job">
+    Wiki Lead
+  </div>
+  </div>
+
+
+  <div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Layla Gusa
+  </div>
+  <div class = "job">
+    Wiki 
+  </div>
 </div>
 
-<div class = "job_rows">
-  <div class = "job">
-    job
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Ishita Siddamreddy
   </div>
   <div class = "job">
-    job
+    Wiki 
+  </div>
+</div>
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Annika Bridge
+  </div>
+  <div class = "job">
+    Human Practices Co-Lead
+  </div>
+</div>
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Anusha Gupta
+  </div>
+  <div class = "job">
+    Secretary
+    Literature Review
+    Project Ideation
+  </div>
+</div>
+
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Aryan Kokkanti
   </div>
   <div class = "job">
     job
   </div>
 </div>
+
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Corinne Drabenstott
+  </div>
+  <div class = "job">
+    job
+  </div>
+</div>
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Daniellejen Nares
+  </div>
+  <div class = "job">
+    Fundraising
+  </div>
+</div>
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Dominic Kubissa
+  </div>
+  <div class = "job">
+    Human Practices 
+  </div>
+</div>
+
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Elizabeth Krist
+  </div>
+  <div class = "job">
+    Dry Lab
+    Human Practices
+    Fundraising
+  </div>
+</div>
+
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Grant Holland
+  </div>
+  <div class = "job">
+    Wet Lab
+    Literature Review
+    Project Ideation
+  </div>
+</div>
+
+
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Heng Annika Shi
+  </div>
+  <div class = "job">
+    Social media lead
+    Human Practices
+    Collaboration lead
+    Fundraising
+  </div>
+</div>
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Jack Titus
+  </div>
+  <div class = "job">
+    Social Media 
+  </div>
+</div>
+
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Joshua Lopez
+  </div>
+  <div class = "job">
+    Wet Lab
+    Literature Review
+    Project Ideation
+    Dry Lab
+  </div>
+</div>
+
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Julia Zhu
+  </div>
+  <div class = "job">
+    job
+  </div>
+</div>
+
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Keshav Saxena
+  </div>
+  <div class = "job">
+    job
+  </div>
+</div>
+
+
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Lahari  Pokala
+  </div>
+  <div class = "job">
+    Wet Lab
+    Literature Review
+    Project Ideation
+    Dry Lab
+  </div>
+</div>
+
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Logan Amos
+  </div>
+  <div class = "job">
+    Human Practices
+  </div>
+</div>
+
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Moiz Chomelawala
+  </div>
+  <div class = "job">
+    job
+  </div>
+</div>
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Nishant Dengi
+  </div>
+  <div class = "job">
+    Wet Lab
+    Literature Review
+    Project Ideation
+  </div>
+</div>
+
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Osvaldo Linares
+  </div>
+  <div class = "job">
+    Dry lab
+    Wet lab
+    Fundraising 
+  </div>
+</div>
+
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Pristine Onuoha
+  </div>
+  <div class = "job">
+    Human Practices Co-Lead
+  </div>
+</div>
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Samantha Carew
+  </div>
+  <div class = "job">
+    job
+  </div>
+</div>
+
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Sriya Darsi
+  </div>
+  <div class = "job">
+    Human Practices
+  </div>
+</div>
+
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Uditi Patil
+  </div>
+  <div class = "job">
+    Wet Lab
+    Literature Review
+    Project Ideation
+  </div>
+</div>
+
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    Zaid Syed
+  </div>
+  <div class = "job">
+    Wet Lab
+    Literature Review
+    Project Ideation
+  </div>
+</div>
+
+<div class = person>
+  <div class = "team_image"> 
+  </div>
+  <div class = "name">
+    name
+  </div>
+  <div class = "job">
+    job
+  </div>
+</div>
+
+</div>
+
+
 
 <!-- <div class="row">
   <div class="col-8">
