Add data to index.js
will try to auto-populate the teams section w/ styling we have rn

--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -16,18 +16,17 @@
 
 <div class = members>
 
-  <div class = person>
-    <div class = "team_image"> 
-    </div>
-    <div class = "name">
-      Gavin Wiltshire
-    </div>
-    <div class = "job">
-      Team Lead
-    </div>
+  <div class = "person">
+    <div class = "team_image"></div>
+      <div class = "name">
+        Gavin Wiltshire
+      </div>
+      <div class = "job">
+        Team Lead
+      </div>
   </div>
 
-  <div class = person>
+  <div class = "person">
     <div class = "team_image"> 
     </div>
     <div class = "name">
