--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -12,409 +12,6 @@
 **big group team picture
 </div>
 
-
-
-<div class = members>
-
-  <div class = "person">
-    <div class = "team_image"></div>
-      <div class = "name">
-        Gavin Wiltshire
-      </div>
-      <div class = "job">
-        Team Lead
-      </div>
-  </div>
-
-  <div class = "person">
-    <div class = "team_image"> 
-    </div>
-    <div class = "name">
-      First + Last name
-    </div>
-    <div class = "job">
-      job
-    </div>
-  </div>>
-
-  <div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    First + Last name
-  </div>
-  <div class = "job">
-    Job
-  </div>
-  </div>
-
-  <div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Isabel Lopez Murillo
-  </div>
-  <div class = "job">
-    Wiki Lead
-  </div>
-  </div>
-
-
-  <div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Layla Gusa
-  </div>
-  <div class = "job">
-    Wiki 
-  </div>
-</div>
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Ishita Siddamreddy
-  </div>
-  <div class = "job">
-    Wiki 
-  </div>
-</div>
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Annika Bridge
-  </div>
-  <div class = "job">
-    Human Practices Co-Lead
-  </div>
-</div>
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Anusha Gupta
-  </div>
-  <div class = "job">
-    Secretary
-    Literature Review
-    Project Ideation
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Aryan Kokkanti
-  </div>
-  <div class = "job">
-    job
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Corinne Drabenstott
-  </div>
-  <div class = "job">
-    job
-  </div>
-</div>
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Daniellejen Nares
-  </div>
-  <div class = "job">
-    Fundraising
-  </div>
-</div>
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Dominic Kubissa
-  </div>
-  <div class = "job">
-    Human Practices 
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Elizabeth Krist
-  </div>
-  <div class = "job">
-    Dry Lab
-    Human Practices
-    Fundraising
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Grant Holland
-  </div>
-  <div class = "job">
-    Wet Lab
-    Literature Review
-    Project Ideation
-  </div>
-</div>
-
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Heng Annika Shi
-  </div>
-  <div class = "job">
-    Social media lead
-    Human Practices
-    Collaboration lead
-    Fundraising
-  </div>
-</div>
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Jack Titus
-  </div>
-  <div class = "job">
-    Social Media 
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Joshua Lopez
-  </div>
-  <div class = "job">
-    Wet Lab
-    Literature Review
-    Project Ideation
-    Dry Lab
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Julia Zhu
-  </div>
-  <div class = "job">
-    job
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Keshav Saxena
-  </div>
-  <div class = "job">
-    job
-  </div>
-</div>
-
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Lahari  Pokala
-  </div>
-  <div class = "job">
-    Wet Lab
-    Literature Review
-    Project Ideation
-    Dry Lab
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Logan Amos
-  </div>
-  <div class = "job">
-    Human Practices
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Moiz Chomelawala
-  </div>
-  <div class = "job">
-    job
-  </div>
-</div>
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Nishant Dengi
-  </div>
-  <div class = "job">
-    Wet Lab
-    Literature Review
-    Project Ideation
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Osvaldo Linares
-  </div>
-  <div class = "job">
-    Dry lab
-    Wet lab
-    Fundraising 
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Pristine Onuoha
-  </div>
-  <div class = "job">
-    Human Practices Co-Lead
-  </div>
-</div>
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Samantha Carew
-  </div>
-  <div class = "job">
-    job
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Sriya Darsi
-  </div>
-  <div class = "job">
-    Human Practices
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Uditi Patil
-  </div>
-  <div class = "job">
-    Wet Lab
-    Literature Review
-    Project Ideation
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Zaid Syed
-  </div>
-  <div class = "job">
-    Wet Lab
-    Literature Review
-    Project Ideation
-  </div>
-</div>
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    name
-  </div>
-  <div class = "job">
-    job
-  </div>
-</div>
-
-</div>
-
-
-
-<!-- <div class="row">
-  <div class="col-8">
-    <h2>What should this page contain?</h2>
-    <hr>
-    <ul>
-      <li>Include pictures of your teammates, don't forget instructors and advisors!</li>
-      <li>You can add a small biography or a few words from each team member, to tell us what you like, and what motivated you to participate in iGEM.</li>
-      <li>Take team pictures! Show us your school, your lab and little bit of your city.</li>
-      <li>Remember that image galleries can help you showcase many pictures while saving space.</li>
-    </ul>
-    <div class="bd-callout bd-callout-info"><strong>Important:</strong> Your wiki pages will be archived at the end of the iGEM season and this content will remain online. Please keep this in mind as you post photos and personal information on this page.</div>
-  </div>
-  <div class="col-4">
-    <h2>Inspirations</h2>
-    <hr>
-    <ul>
-      <li><a href="https://2019.igem.org/Team:CU/Team">2019 CU</a></li>
-      <li><a href="https://2019.igem.org/Team:UANL/Team">2019 UANL</a></li>
-      <li><a href="https://2019.igem.org/Team:William_and_Mary/Team">2019 William and Mary</a></li>
-      <li><a href="https://2020.igem.org/Team:BOKU-Vienna/Team">2020 BOKU Vienna </a></li>
-      <li><a href="https://2020.igem.org/Team:CAU_China/Team_Member">2020 CAU China</a></li>
-      <li><a href="https://2020.igem.org/Team:Lethbridge/Members">2020 Lethbridge</a></li>
-    </ul>
-  </div>
-</div> -->
+<div class="members"></div>
 
 {% endblock %}
