Add pop-up styling

--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -12,7 +12,28 @@
 **big group team picture
 </div>
 
-<div></div>
+<!--probably going to want to auto-populate this too, keep this for now for testing-->
+<div class="center">
+  <div class="team-popup">
+    <div class="left">
+      <div class="name">
+        Test Name
+      </div>
+      <div class="name job">
+        Role: Wiki
+      </div>
+      <div class="description">
+        <p>
+          stuff about person
+        </p>
+      </div>
+    </div>
+  
+
+  </div>
+
+</div>
+
 
 <div class="members"></div>
 
