--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -14,7 +14,7 @@
 
 <!--probably going to want to auto-populate this too, keep this for now for testing-->
 <div class="center">
-  <div class="team-popup">
+  <div class="team-popup" id="test">
     <div class="left">
       <div class="name">
         Test Name
@@ -28,12 +28,8 @@
         </p>
       </div>
     </div>
-  
-
   </div>
-
 </div>
-
 
 <div class="members"></div>
 
