references linked to toggle

--- a/wiki/pages/description.html
+++ b/wiki/pages/description.html
@@ -124,12 +124,12 @@
             </p>
             <p>&emsp;We want to synthesize plasmids containing the sequence of the highly selective FA4 binding pocket of human serum albumin (hSA) bound to the PASR (peptide that triggers pIgR-mediated transcytosis) sequence. One of these plasmids will contain the native sequence of FA4 modified slightly to maximize stability, and the other will contain a completelyn engineered FA4 pocket. ] This comparative study will validate our methodology and ensure that any observed changes in binding affinity are attributable to the engineered modifications rather than inherent variability in albumin's binding capabilities.To test the binding affinity of our sequences and establish a control group, we have three possible laboratory techniques available: Biolayer Interferometry (BLI), ELISA, and Isothermal titration calorimetry. 
             </p>
-            <p>&emsp;In the case we decide to further evaluate unmodified albumin to strengthen our control group, we will utilize BLI. BLI detects shifts in signal intensity due to the size of the receptor added during the association phase. Here we will immobilize PFOA through hydrophobic interactions allowing unbound albumin to attach.<a class = links href = "#refs"> [3]</a>
+            <p>&emsp;In the case we decide to further evaluate unmodified albumin to strengthen our control group, we will utilize BLI. BLI detects shifts in signal intensity due to the size of the receptor added during the association phase. Here we will immobilize PFOA through hydrophobic interactions allowing unbound albumin to attach.<a class = links href = "#refs"> [15]</a>
             </p>
         </div>
     <h2 class="subheader" id="refs">REFERENCES</h2>
         <div>
-            <ol class = "links">
+            <ol class = "resourceLinks">
               <li> <a href =https://www.niehs.nih.gov/health/topics/agents/pfc> https://www.niehs.nih.gov/health/topics/agents/pfc </a> </li>
               <li> <a href =  https://www.niehs.nih.gov/health/topics/agents/pfc> https://www.niehs.nih.gov/health/topics/agents/pfc</a> </li>
               <li> <a href = https://www.epa.gov/pfas/pfas-explained> https://www.epa.gov/pfas/pfas-explained</a></li>
@@ -142,7 +142,6 @@
               <li> <a href = https://www.epa.gov/newsreleases/biden-harris-administration-finalizes-first-ever-national-drinking-water-standard#:~:text=The%20rule%20also%20sets%20a,impacts%20in%20adults%2C%20and%20immune/> https://www.epa.gov/newsreleases/biden-harris-administration-finalizes-first-ever-national-drinking-water-standard#:~:text=The%20rule%20also%20sets%20a,impacts%20in%20adults%2C%20and%20immune</a></li>
               <li> <a href = https://www.niehs.nih.gov/health/topics/agents/pfc#:~:text=PFAS%20are%20a%20group%20of,the%20U.S.%20Environmental%20Protection%20Agency> https://www.niehs.nih.gov/health/topics/agents/pfc#:~:text=PFAS%20are%20a%20group%20of,the%20U.S.%20Environmental%20Protection%20Agency</a></li>
               <li> <a href = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7980502/>https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7980502/</li>
-              <li></li>
               <li><a href = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5977230/>https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5977230/</li>
               <li><a href = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7956327/>https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7956327/</li>
               <li><a href = https://pubs.acs.org/doi/10.1021/acsomega.1c05659>https://pubs.acs.org/doi/10.1021/acsomega.1c05659</a></li>
