Re-add team auto-pop. + pop-up
JS/CSS stylesheet + team.html were changed

--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -31,334 +31,6 @@
   </div>
 </div>
 
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Ishita Siddamreddy
-  </div>
-  <div class = "job">
-    Wiki 
-  </div>
-</div>
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Annika Bridge
-  </div>
-  <div class = "job">
-    Human Practices Co-Lead
-  </div>
-</div>
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Anusha Gupta
-  </div>
-  <div class = "job">
-    Secretary
-    Literature Review
-    Project Ideation
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Aryan Kokkanti
-  </div>
-  <div class = "job">
-    job
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Corinne Drabenstott
-  </div>
-  <div class = "job">
-    job
-  </div>
-</div>
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Daniellejen Nares
-  </div>
-  <div class = "job">
-    Fundraising
-  </div>
-</div>
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Dominic Kubissa
-  </div>
-  <div class = "job">
-    Human Practices 
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Elizabeth Krist
-  </div>
-  <div class = "job">
-    Dry Lab
-    Human Practices
-    Fundraising
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Grant Holland
-  </div>
-  <div class = "job">
-    Wet Lab
-    Literature Review
-    Project Ideation
-  </div>
-</div>
-
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Heng Annika Shi
-  </div>
-  <div class = "job">
-    Social media lead
-    Human Practices
-    Collaboration lead
-    Fundraising
-  </div>
-</div>
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Jack Titus
-  </div>
-  <div class = "job">
-    Social Media 
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Joshua Lopez
-  </div>
-  <div class = "job">
-    Wet Lab
-    Literature Review
-    Project Ideation
-    Dry Lab
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Julia Zhu
-  </div>
-  <div class = "job">
-    job
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Keshav Saxena
-  </div>
-  <div class = "job">
-    job
-  </div>
-</div>
-
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Lahari  Pokala
-  </div>
-  <div class = "job">
-    Wet Lab
-    Literature Review
-    Project Ideation
-    Dry Lab
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Logan Amos
-  </div>
-  <div class = "job">
-    Human Practices
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Moiz Chomelawala
-  </div>
-  <div class = "job">
-    job
-  </div>
-</div>
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Nishant Dengi
-  </div>
-  <div class = "job">
-    Wet Lab
-    Literature Review
-    Project Ideation
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Osvaldo Linares
-  </div>
-  <div class = "job">
-    Dry lab
-    Wet lab
-    Fundraising 
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Pristine Onuoha
-  </div>
-  <div class = "job">
-    Human Practices Co-Lead
-  </div>
-</div>
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Samantha Carew
-  </div>
-  <div class = "job">
-    job
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Sriya Darsi
-  </div>
-  <div class = "job">
-    Human Practices
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Uditi Patil
-  </div>
-  <div class = "job">
-    Wet Lab
-    Literature Review
-    Project Ideation
-  </div>
-</div>
-
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    Zaid Syed
-  </div>
-  <div class = "job">
-    Wet Lab
-    Literature Review
-    Project Ideation
-  </div>
-</div>
-
-<div class = person>
-  <div class = "team_image"> 
-  </div>
-  <div class = "name">
-    name
-  </div>
-  <div class = "job">
-    job
-  </div>
-</div>
-
-</div>
-
-<div class = popup>
-  <div class = "memberName">
-  first + last name
-  </div>
-  <div class = "roles">
-    roles
-  </div>
-  <div class = "description">
-    description
-  </div>
-</div>
+<div class="members"></div>
 
 {% endblock %}
