major info has been added to the js

--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -28,6 +28,11 @@
         </p>
       </div>
     </div>
+    <div class = "right">
+      <div class = "personImg">
+          <img src = #>
+      </div>
+    </div>
   </div>
 </div>
 
