--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -29,9 +29,7 @@
       </div>
     </div>
     <div class = "right">
-      <div class = "personImg">
-          <img src = #>
-      </div>
+          <img src = "static\images\person.png" alt = "profile picture">
     </div>
   </div>
 </div>
