pop up styling with image styling

--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -29,7 +29,8 @@
       </div>
     </div>
     <div class = "right">
-          <img src = "static\images\person.png" alt = "profile picture">
+          <div class = "memberPicture">
+          </div>
     </div>
   </div>
 </div>
