base javascript code

--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -13,7 +13,7 @@
 </div>
 
 <!--probably going to want to auto-populate this too, keep this for now for testing-->
-<div class="center">
+<!-- <div class="center">
   <div class="team-popup" id="test">
     <div class="left">
       <div class="name">
@@ -33,7 +33,7 @@
           </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <div class="members"></div>
 
